# src/main/java/com/system/controller/StudentController.java
@@ -1,13 +1,13 @@
 package com.system.controller;
 
-import com.system.model.Course;
-import com.system.model.CourseRegistrationRequest;
-import com.system.model.Student;
+import com.system.exceptions.UserExceptions;
+import com.system.model.*;
 import com.system.repository.*;
-import com.system.security.CustomUserDetails;
-import com.system.util.Exceptions;
+import com.system.service.StudentService;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.LockModeType;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.transaction.annotation.Transactional;
 import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -15,102 +15,86 @@ import org.springframework.http.*;
 import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/students")
 public class StudentController {
+    private static final Logger logger = LoggerFactory.getLogger(StudentController.class);
 
     @Autowired
-    private StudentRepository studentRepository;
+    private StudentService studentService;
 
     @Autowired
-    private CourseRepository courseRepository;
+    private EntityManager entityManager;
 
-    @Autowired
-    private EntityManager entityManager; // Inject EntityManager
 
     @Transactional
     @PostMapping("/courses")
     public ResponseEntity<?> registerCourse(@Valid @RequestBody CourseRegistrationRequest request, Authentication authentication) {
+        logger.info("Attempting to register student with ID: {} for course with ID: {}", request.getStudentId(), request.getCourseId());
         authenticateStudent(request.getStudentId(), authentication);
 
         Student student = entityManager.find(Student.class, request.getStudentId(), LockModeType.PESSIMISTIC_WRITE);
         Course course = entityManager.find(Course.class, request.getCourseId(), LockModeType.PESSIMISTIC_WRITE);
 
         if (student == null || course == null) {
-            throw new Exceptions.InvalidInput("Student or Course not found");
+            throw new UserExceptions.InvalidInput("Invalid input: student or course not found");
         }
 
         if (student.getCourses().contains(course)) {
-            throw new Exceptions.CourseRegistration("The student is already enrolled in this course.");
+            throw new UserExceptions.CourseRegistration("The student is already enrolled in this course");
         }
         if (student.getCourses().size() >= 2) {
-            throw new Exceptions.CourseRegistration("You can not register to more than 2 courses");
+            throw new UserExceptions.CourseRegistration("The student can't enroll in more than 2 courses");
         }
         if (course.getStudents().size() >= 30) {
-            throw new Exceptions.CourseRegistration("The course is already full.");
+            throw new UserExceptions.CourseRegistration("Course is already full");
         }
         student.getCourses().add(course);
         course.getStudents().add(student);
 
-        // Save changes
-        studentRepository.save(student);
-        courseRepository.save(course);
-
+        logger.info("Registration successful for student (ID: {}) to course (ID: {})", request.getStudentId(), request.getCourseId());
         return ResponseEntity.ok("Registration to the course was successful.");
     }
+
     @Transactional
     @DeleteMapping("/courses")
     public ResponseEntity<?> cancelCourseRegistration(@Valid @RequestBody CourseRegistrationRequest request, Authentication authentication) {
         authenticateStudent(request.getStudentId(), authentication);
 
-        // Fetch student and course with pessimistic lock
+        logger.info("Attempting to cancel registration for student with ID: {} from course with ID: {}", request.getStudentId(), request.getCourseId());
+
         Student student = entityManager.find(Student.class, request.getStudentId(), LockModeType.PESSIMISTIC_WRITE);
         Course course = entityManager.find(Course.class, request.getCourseId(), LockModeType.PESSIMISTIC_WRITE);
 
         if (student == null || course == null) {
-            throw new Exceptions.InvalidInput("Student or Course not found");
+            throw new UserExceptions.InvalidInput("Invalid input: student or course not found");
         }
-
-        // Check if student is enrolled in this course
         if (!student.getCourses().contains(course)) {
-            throw new Exceptions.InvalidInput(("The student is not enrolled in this course."));
+            throw new UserExceptions.InvalidInput(("The student is not enrolled in this course."));
         }
 
         student.getCourses().remove(course);
         course.getStudents().remove(student);
-
-        studentRepository.save(student);
-        courseRepository.save(course);
-
+        logger.info("Successfully canceled registration for student (ID: {}) from course (ID: {})", request.getStudentId(), request.getCourseId());
         return ResponseEntity.ok("Registration was successfully canceled.");
     }
 
-    // New method to get registered courses
     @GetMapping("/courses")
     public ResponseEntity<?> getRegisteredCourses(@RequestParam Integer studentId, Authentication authentication) {
+        logger.debug("Received request to get registered courses for student with ID: {}", studentId);
         authenticateStudent(studentId, authentication);
-
-        Optional<Student> studentOpt = studentRepository.findById(studentId);
-        if (studentOpt.isEmpty()) {
-            throw new Exceptions.NotFound("Student not found");
-        }
-        Student student = studentOpt.get();
-        Set<Integer> courses = student.getCourses().stream()
-                .map(Course::getId)
-                .collect(Collectors.toSet());
+        Set<Integer> courses = studentService.getRegisteredCourses(studentId);
         return ResponseEntity.ok(courses);
     }
 
 
     private void authenticateStudent(Integer studentId, Authentication authentication) {
-        CustomUserDetails userDetails = (CustomUserDetails) authentication.getPrincipal();
-        Integer studentIdFromToken = userDetails.getStudentId();
+        Integer studentIdFromToken = Integer.valueOf((String) authentication.getPrincipal());
         if (!studentIdFromToken.equals(studentId)) {
-            throw new Exceptions.UnauthorizedAccess();
+            logger.debug("Wrong authentication for student: {}", studentId);
+            throw new UserExceptions.UnauthorizedAccess();
         }
     }
 
